# 2024-Molushop

./: .gitignore  README.md
Molushop/: Cargo.toml  diesel.toml
Molushop/assets/: extraScript.js  style.css
Molushop/migrations/2024-10-03-170959_create_tables/: down.sql  up.sql
Molushop/sql code/: ASelects.sql  creacion_tablas.sql  insertarCategoria.sql  recursion.sql  tablas_base.sql  unique_foraneo.sql
Molushop/src/: controllers.rs  main.rs  models.rs  routes.rs  schema.rs  services.rs
Molushop/templates/: base.html  carrito.html  category.html  list-category-base.html  main.html  nav.html  pop-carrito.html  pop-eliminar.html  productos.html  tarjeta.html  test.html
