[package]
name = "Molushop"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files ="*"
tera = "1.19.1"
lazy_static = "1.4.0"
rand = "0.8"
diesel = {version ="2.1.0", features =["postgres","uuid","numeric"]}
dotenvy = "0.15"
serde = {version ="1.0", features = ["derive"]}
bigdecimal = "0.4"

[dependencies.uuid]
version = "1.10.0"
features = [
    "v7",
    "v4",                
    "fast-rng",          
    "macro-diagnostics", 
    "serde",
]